--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>HotoCocoa.github</title>
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <link rel="import" href="bower_components/core-elements/core-elements.html">
-    <link rel="stylesheet" src="css/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body fullbleed layout vertical>
     <core-header-panel mode="waterfall-tall" flex>
