--- a/dest/index.html
+++ b/dest/index.html
@@ -3,17 +3,22 @@
   <head>
   <title>HotoCocoa.github</title>
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
-    <link rel="import" href="bower_components/core-elements/core-elements.html">
+    <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
+    <link rel="import" href="bower_components/core-toolbar/core-toolbar.html">
+    <link rel="import" href="bower_components/cocoa-elements/cocoa-elements.html">
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body fullbleed layout vertical>
-    <core-header-panel mode="waterfall-tall" flex>
-      <core-toolbar class="core-header">
-        <div>Cocoa Hoto</div>
+    <core-header-panel mode="cover" flex>
+      <core-toolbar class="core-header tall">
+        <h1>Cocoa Hoto</h1>
       </core-toolbar>
       <div class=content>
-        <div horizontal center-justified layout>
+        <div  center-justified layout>
           <div>はぁ......ココアちゃん......！</div>
+          <!-- <cocoa-list> -->
+            <cocoa-card name="cocoa" author="hotoCocoa" avatar="https://avatars3.githubusercontent.com/u/11257432" about="ここあかふぇ(仮)"></cocoa-card>
+          <!-- </cocoa-list> -->
         </div>
       </div>
     </core-header-panel>
