--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
   <title>HotoCocoa.github</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
     <link rel="import" href="bower_components/core-toolbar/core-toolbar.html">
@@ -16,9 +17,7 @@
       <div class=content>
         <div  center-justified layout>
           <div>はぁ......ココアちゃん......！</div>
-          <!-- <cocoa-list> -->
-            <cocoa-card name="cocoa" author="hotoCocoa" avatar="https://avatars3.githubusercontent.com/u/11257432" about="ここあかふぇ(仮)"></cocoa-card>
-          <!-- </cocoa-list> -->
+            <cocoa-list src="data/cocoa.yaml" type="yaml"></cocoa-list>
         </div>
       </div>
     </core-header-panel>
